--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
-<html>
-	<head>
-		<title>2 Girls and a Van</title>
-	</head>
-	<body>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>2 Girls and a Van - Bohemian Handcrafted Goods</title>
+<link href="assets/css/screen.css" rel="stylesheet" type="text/css" media="screen" />
+<script type="text/javascript" src="tools/jquery.min.js"></script> 
+<link rel="stylesheet" href="https://use.typekit.net/tzl6hri.css">
+<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
+
+</head>
+<body>
+<div class="black"></div>
+<div id="wrapper">
+	<div id="header">
 		<h1>2 Girls and a Van</h1>
-		<p>Website coming soon. In the meantime visit our Instagram <a href="https://www.instagram.com/2girls_andavan/">@2girls_andavan</a>.</p>
-	</body>
+		<div class="logo"><img src="images/2girlsandavan-logo-white.png" alt="" /></div>
+		<h2>Bohemian Handcrafted Goods</h2>
+	</div>
+	<!--<div id="middle">
+		<p>description</p>
+	</div>-->
+	<div id="footer">
+		<div class="instagram">
+			<a href="https://www.instagram.com/2girls_andavan/"><img src="images/instagram-white.png" />
+			<p>Follow us on Instagram</p></a>
+<!--
+		<div>
+		<ul class="social">
+			<li class="facebook"><a href="#"></li>
+			<li class="twitter"><a href="#"></li>
+			<li class="youtube"><a href="#"></li>
+		</ul>
+		</div>
+-->
+	</div>
+</div>
+</body>
 </html>
